[FIX] Procfile commited

--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.9.0"
+  },
+  "engines": {
+    "node": "v8.11.3"
   }
 }
